--- a/.github/workflows/test-login.yml
+++ b/.github/workflows/test-login.yml
@@ -1,4 +1,4 @@
-name: Test Login
+name: Unit tests
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test_login:
-    name: Run Login Test
+    name: Run Unit tests
     runs-on: ubuntu-latest
 
     steps:
