Add general CI workflow for all tests

--- a/.github/workflows/CItest.yml
+++ b/.github/workflows/CItest.yml
@@ -3,10 +3,10 @@ name: CloudTrip CI
 on:
   push:
     branches:
-      - main
+      - ci/general-workflow
   pull_request:
     branches:
-      - main
+      - ci/general-workflow
 
 jobs:
   test:
