--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest -v tests/traveller_test.py
+          pytest -v tests/auth_test.py
